--- a/Handled/package.json
+++ b/Handled/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular-bootstrap-md": "^5.1.2",
+    "angular2-modal": "^3.0.3",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ngx-modialog": "^5.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
