--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "enhanced-resolve": "^3.4.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "font-awesome-scss": "^1.0.0",
     "fs-extra": "^4.0.0",
     "glob": "^7.0.3",
